--- a/CotizacionesAPI/CotizacionesAPI.csproj
+++ b/CotizacionesAPI/CotizacionesAPI.csproj
@@ -14,6 +14,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.1.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.9" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.0.2" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.0.2" />
   </ItemGroup>
 
